--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.20",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "yup": "^0.32.9"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
