--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
+    "@sveltejs/adapter-static": "1.0.0-next.4",
+    "@sveltejs/kit": "1.0.0-next.55",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/svelte": "^3.0.3",
@@ -28,6 +30,7 @@
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
     "babel-jest": "^26.6.3",
+    "bueno": "^0.1.5",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
@@ -35,20 +38,28 @@
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-testing-library": "^3.10.1",
+    "front-matter": "^4.0.2",
+    "highlight.js": "^10.7.1",
+    "html-entities": "^2.1.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
+    "mdsvex": "^0.9.0",
     "pinst": "^2.1.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.0.0",
+    "svelte-focus-on": "^0.1.4",
     "svelte-jester": "^1.3.0",
+    "svelte-markdown": "^0.1.4",
+    "svelte-portal": "^2.1.1",
     "tippy.js": "^6.0.0",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.20",
     "typescript": "^4.1.3",
+    "vite": "^2.1.2",
     "yup": "^0.32.9"
   },
   "bolt": {
