--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
     "babel-jest": "^26.6.3",
-    "bueno": "^0.1.5",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
@@ -53,7 +52,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.0.0",
+    "svelte": "^3.31.0",
     "svelte-focus-on": "^0.1.4",
     "svelte-jester": "^1.3.0",
     "svelte-markdown": "^0.1.5",
@@ -67,7 +66,9 @@
     "yup": "^0.32.9"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
