--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -11,11 +11,7 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["svelte", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -25,11 +21,9 @@
     "test:ci": "jest --ci --coverage"
   },
   "peerDependencies": {
-    "svelte": "^3.0.0"
+    "svelte": "^3.31.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@felte/common": "^0.2.3",
     "lodash": "^4.17.20"
