--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "typedoc": "^0.20.20",
     "typescript": "^4.1.3",
     "vite": "^2.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "zod": "^1.11.13"
   },
   "bolt": {
     "workspaces": [
