--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-svelte",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "An error reporter for Felte using a Svelte component",
   "main": "dist/index.js",
   "svelte": "src/index.js",
@@ -9,7 +9,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-dom",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -20,7 +25,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.2.2",
+    "@felte/common": "^0.3.0",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.31.0",
     "svelte-preprocess": "^4.6.9"
@@ -28,9 +33,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "devDependencies": {
-    "felte": "^0.5.3",
+    "felte": "^0.6.0",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
   }
