--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-superstruct",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A package to use Superstruct validation with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -9,7 +9,13 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-superstruct",
-  "keywords": ["svelte", "forms", "validation", "felte", "superstruct"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte",
+    "superstruct"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -20,10 +26,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.2.4"
+    "@felte/common": "^0.3.0"
   },
   "devDependencies": {
-    "felte": "^0.5.6",
+    "felte": "^0.6.0",
     "superstruct": "^0.15.0"
   },
   "peerDependencies": {
