--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,9 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm i -g bolt
     - run: bolt
-    - run: bolt ws run build
+    - run: yarn build
     - name: Run tests and generate coverage
-      run: bolt ws run test:ci
+      run: yarn test:ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
