--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -1,7 +1,7 @@
 {
   "name": "felte",
-  "version": "0.6.0",
-  "description": "A form library for Svelte",
+  "version": "0.6.1",
+  "description": "An extensible form library for Svelte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
@@ -11,11 +11,7 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["svelte", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -27,11 +23,9 @@
   "peerDependencies": {
     "svelte": "^3.31.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
-    "@felte/common": "^0.3.0",
+    "@felte/common": "^0.3.1",
     "lodash-es": "^4.17.21"
   },
   "publishConfig": {
