--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@sveltejs/adapter-static": "1.0.0-next.4",
-    "@sveltejs/kit": "1.0.0-next.64",
+    "@sveltejs/kit": "1.0.0-next.66",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/svelte": "^3.0.3",
@@ -45,7 +45,6 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.1",
-    "html-entities": "^2.3.2",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
@@ -71,7 +70,9 @@
     "zod": "^1.11.13"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
