--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "felte",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "An extensible form library for Svelte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -11,7 +11,11 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": ["svelte", "forms", "validation"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -23,7 +27,9 @@
   "peerDependencies": {
     "svelte": "^3.31.0"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@felte/common": "^0.3.1",
     "lodash-es": "^4.17.21"
