--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@sveltejs/adapter-static": "1.0.0-next.4",
-    "@sveltejs/kit": "1.0.0-next.66",
+    "@sveltejs/kit": "1.0.0-next.67",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/svelte": "^3.0.3",
@@ -58,7 +58,7 @@
     "svelte": "^3.31.0",
     "svelte-focus-on": "^0.1.4",
     "svelte-jester": "^1.3.0",
-    "svelte-markdown": "^0.1.5",
+    "svelte-markdown": "^0.1.6",
     "svelte-portal": "^2.1.1",
     "tippy.js": "^6.0.0",
     "ts-jest": "^26.5.0",
@@ -70,9 +70,7 @@
     "zod": "^1.11.13"
   },
   "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
+    "workspaces": ["packages/*"]
   },
   "volta": {
     "node": "14.15.5",
