--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@wessberg/rollup-plugin-ts": "^1.3.8",
+    "all-contributors-cli": "^6.20.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
@@ -70,7 +71,9 @@
     "zod": "^1.11.13"
   },
   "bolt": {
-    "workspaces": ["packages/*"]
+    "workspaces": [
+      "packages/*"
+    ]
   },
   "volta": {
     "node": "14.15.5",
