--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,9 +9,7 @@
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "publishConfig": {
     "access": "public"
   },
@@ -30,11 +28,6 @@
   "bugs": {
     "url": "https://github.com/pablo-abc/felte/issues"
   },
-  "dependencies": {
-    "lodash-es": "^4.17.21"
-  },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.4",
-    "lodash": "^4.17.21"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
