--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
-    "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-replace": "^2.4.2",
     "@sveltejs/adapter-static": "1.0.0-next.4",
     "@sveltejs/kit": "1.0.0-next.71",
     "@testing-library/dom": "^7.29.4",
@@ -68,9 +68,7 @@
     "zod": "^1.11.13"
   },
   "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
+    "workspaces": ["packages/*"]
   },
   "volta": {
     "node": "14.15.5",
