--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "svelte-focus-on": "^0.1.4",
     "svelte-jester": "^1.3.0",
     "svelte-markdown": "^0.1.6",
-    "svelte-portal": "^2.1.1",
+    "svelte-portal": "^2.1.2",
     "tippy.js": "^6.0.0",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
@@ -69,9 +69,7 @@
     "zod": "^1.11.13"
   },
   "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
+    "workspaces": ["packages/*"]
   },
   "volta": {
     "node": "14.15.5",
