--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,11 +25,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i -g bolt
-    - run: bolt
-    - run: yarn build
+    - run: npm i -g pnpm
+    - run: pnpm i
+    - run: pnpm build
     - name: Run tests and generate coverage
-      run: yarn test:ci
+      run: pnpm test:ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
