--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "pnpm -r --parallel dev --filter='!@felte/site'",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
-    "publish": "pnpm i && pnpm build && pnpm -r publish",
+    "publish": "pnpm i && pnpm build && pnpm -r publish --publish-branch main",
     "postpublish": "pinst --enable"
   },
   "devDependencies": {
