--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "zod": "^1.11.13"
   },
   "volta": {
-    "node": "14.15.5"
+    "node": "14.15.5",
+    "npm": "6.14.13"
   },
   "dependencies": {
     "@changesets/cli": "^2.14.1",
