--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "docs:build": "pnpm -r --filter='felte' docs:build",
     "site:build": "pnpm -r --filter='@felte/site' build",
-    "site:start": "pnpm -r --filter='@felte/site' start",
+    "site:preview": "pnpm -r --filter='@felte/site' preview",
     "site:dev": "pnpm -r --filter='@felte/site' dev",
     "test": "pnpm -r test",
     "test:ci": "pnpm -r test:ci",
@@ -23,7 +23,6 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@sveltejs/adapter-static": "1.0.0-next.4",
-    "@sveltejs/kit": "1.0.0-next.71",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/svelte": "^3.0.3",
@@ -48,7 +47,7 @@
     "jest": "^26.6.3",
     "mdsvex": "^0.9.0",
     "pinst": "^2.1.4",
-    "pnpm": "^6.2.1",
+    "pnpm": "^6.2.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
