--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -11,7 +11,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-svelte",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -27,7 +32,11 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": ["dist", "src", "types"],
+  "files": [
+    "dist",
+    "src",
+    "types"
+  ],
   "devDependencies": {
     "felte": "workspace:*",
     "rollup-plugin-svelte": "^7.1.0",
