--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -17,7 +17,7 @@
     "prettier": "^2.2.1",
     "svelte": "^3.31.0",
     "svelte-focus-on": "^0.1.4",
-    "tippy.js": "^6.0.0",
+    "tippy.js": "^6.3.1",
     "yup": "^0.32.9"
   },
   "type": "module",
@@ -27,6 +27,7 @@
     "@felte/reporter-tippy": "^0.3.2",
     "@felte/validator-yup": "^0.2.5",
     "felte": "^0.7.8",
+    "fuse.js": "^6.4.6",
     "html-minifier": "^4.0.0",
     "svelte-markdown": "^0.1.7",
     "svelte-portal": "^2.1.2"
