--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,14 +10,14 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.13",
     "@sveltejs/kit": "1.0.0-next.140",
-    "eslint-plugin-svelte3": "^3.1.2",
+    "eslint-plugin-svelte3": "^3.2.0",
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.1",
     "mdsvex": "^0.9.0",
     "prettier": "^2.2.1",
     "svelte": "^3.31.0",
     "svelte-focus-on": "^0.1.4",
-    "tippy.js": "^6.0.0",
+    "tippy.js": "^6.3.1",
     "yup": "^0.32.9"
   },
   "type": "module",
@@ -27,6 +27,7 @@
     "@felte/reporter-tippy": "^0.3.6",
     "@felte/validator-yup": "^0.2.7",
     "felte": "^0.7.13",
+    "flexsearch": "^0.7.21",
     "html-minifier": "^4.0.0",
     "svelte-markdown": "^0.1.7",
     "svelte-portal": "^2.1.2"
