--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,13 +10,19 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.13",
     "@sveltejs/kit": "1.0.0-next.140",
+    "autoprefixer": "^10.3.1",
+    "cssnano": "^5.0.6",
     "eslint-plugin-svelte3": "^3.2.0",
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.1",
     "mdsvex": "^0.9.0",
+    "postcss": "^8.3.5",
+    "postcss-load-config": "^3.1.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "svelte": "^3.31.0",
     "svelte-focus-on": "^0.1.4",
+    "svelte-preprocess": "^4.7.4",
     "tippy.js": "^6.3.1",
     "yup": "^0.32.9"
   },
@@ -28,6 +34,7 @@
     "@felte/validator-yup": "^0.2.7",
     "felte": "^0.7.13",
     "flexsearch": "^0.7.21",
+    "focus-visible": "^5.2.0",
     "html-minifier": "^4.0.0",
     "svelte-markdown": "^0.1.7",
     "svelte-portal": "^2.1.2"
