--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@felte/reporter-solid",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "An error reporter for Felte using a Solid component",
   "main": "dist/index.js",
   "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-solid",
-  "keywords": ["solidjs", "solid", "forms", "validation", "felte"],
+  "keywords": [
+    "solidjs",
+    "solid",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "license": "MIT",
   "type": "module",
   "types": "dist/index.d.ts",
@@ -18,7 +24,9 @@
     },
     "./package.json": "./package.json"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -cw",
