--- a/packages/validator-yup/package.json
+++ b/packages/validator-yup/package.json
@@ -10,12 +10,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-yup",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -26,7 +21,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.5.0"
+    "@felte/common": "workspace:*"
   },
   "devDependencies": {
     "felte": "^0.8.0",
