--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "typedoc": "^0.20.20",
     "typescript": "^4.1.3",
     "yup": "^0.32.9",
-    "zod": "^1.11.13"
+    "zod": "^1.11.13",
+    "vest": "^4.0.0-next-0370fc"
   },
   "volta": {
     "node": "14.15.5",
