--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -101,6 +101,15 @@
         "code",
         "bug"
       ]
+    },
+    {
+      "login": "loremaps",
+      "name": "Panagiotis Kapros",
+      "avatar_url": "https://avatars.githubusercontent.com/u/18003912?v=4",
+      "profile": "https://github.com/loremaps",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
