--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -7,13 +7,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-solid",
-  "keywords": [
-    "solidjs",
-    "solid",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["solidjs", "solid", "forms", "validation", "felte"],
   "license": "MIT",
   "type": "module",
   "types": "dist/index.d.ts",
@@ -24,13 +18,13 @@
     },
     "./package.json": "./package.json"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -cw",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "test": "jest",
+    "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
     "@felte/common": "workspace:*"
@@ -38,12 +32,14 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-typescript": "^7.14.5",
+    "@felte/solid": "workspace:*",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@types/node": "^15.12.4",
     "babel-preset-solid": "^1.0.0",
     "rollup": "^2.52.1",
+    "jest": "^26.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "solid-js": "^1.2.0",
     "solid-testing-library": "^0.2.1",
