--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -12,6 +12,7 @@
     "@sveltejs/kit": "1.0.0-next.202",
     "autoprefixer": "^10.3.1",
     "cssnano": "^5.0.6",
+    "dotenv": "^11.0.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.1",
