--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -37,6 +37,7 @@
     "flexsearch": "^0.7.21",
     "focus-visible": "^5.2.0",
     "html-minifier": "^4.0.0",
+    "svelte-lazy": "^1.1.0",
     "svelte-markdown": "^0.2.0",
     "svelte-portal": "^2.1.2"
   },
