--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "browserslist": [
     "defaults",
     "not IE 11",
-    "not op_mini all"
+    "not op_mini all",
+    "not Baidu 7.12"
   ]
 }
