--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-rename-node-modules": "^1.3.1",
     "rollup-plugin-ts": "^2.0.5",
     "superstruct": "^0.15.0",
     "svelte": "^3.31.0",
