--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^16.8.0 || ^17.0.2"
   },
   "devDependencies": {
     "@felte/common": "workspace:*",
@@ -49,6 +49,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/react": "^17.0.37",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^26.5.0"
   },
